[Refact] RacingCarGame 객체에서 전체 실행 흐름 관리하는 메소드 추가. sonar lint 부분 개선.